// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`formatRouteGuardReviewPeerFeedbackAbsorbPrompt given: [case1] the reply-prompt with two reviewers when: [t0] rendered then: matches snapshot 1`] = `
"🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/2
   │  ├─ slug = architect
   │  ├─ verdict = 2 blockers, 1 nitpick
   │  ├─ absorb from
   │  │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.given.by_peer.architect.md
   │  └─ articulate into
   │     └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.taken.by_self.architect.md
   │
   ├─ review.peer 2/2
   │  ├─ slug = mechanic
   │  ├─ verdict = 0 blockers, 3 nitpicks
   │  ├─ absorb from
   │  │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r002._.given.by_peer.mechanic.md
   │  └─ articulate into
   │     └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r002._.taken.by_self.mechanic.md
   │
   └─ absorb each reviewer, then run all 2 — one per reviewer
      ├─ rhx route.stone.set --stone 1.execute --as absorbed --that architect
      └─ rhx route.stone.set --stone 1.execute --as absorbed --that mechanic"
`;

exports[`formatRouteGuardReviewPeerFeedbackAbsorbPrompt given: [case2] the absent case for one reviewer when: [t0] rendered then: matches snapshot 1`] = `
"✋ feedbackAbsorption absent for reviewer architect
   ├─ the guard looked for your response here, and did not find it
   │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.taken.by_self.architect.md
   │
   ├─ why
   │  └─ --as absorbed is a promise that you engaged each
   │     concern. the .taken file IS that engagement — absent
   │     it, there is no ground to stand on.
   │
   └─ what to do
      ├─ absorb from
      │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.given.by_peer.architect.md
      └─ articulate into
         └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.taken.by_self.architect.md"
`;

exports[`formatRouteGuardReviewPeerFeedbackAbsorbPrompt given: [case3] the stale case for one reviewer when: [t0] rendered then: matches snapshot 1`] = `
"✋ feedbackAbsorption stale for reviewer architect

   ├─ your response answers an earlier round of feedback from this reviewer
   │
   ├─ why
   │  └─ the reviewer has spoken again. your prior response still
   │     stands for what it answered — this is NEW feedback.
   │
   └─ what to do — absorb the feedback that is live
      ├─ absorb from
      │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.given.by_peer.architect.md
      └─ articulate into
         └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.taken.by_self.architect.md"
`;

exports[`formatRouteGuardReviewPeerFeedbackAbsorbPrompt given: [case4] a RETIRED reviewer still owes a reply when: [t0] rendered beside a live reviewer then: matches snapshot 1`] = `
"🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/2
   │  ├─ slug = architect
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ absorb from
   │  │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.given.by_peer.architect.md
   │  └─ articulate into
   │     └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.taken.by_self.architect.md
   │
   ├─ review.peer 2/2
   │  ├─ slug = mechanic
   │  ├─ status = retired from the guard config
   │  ├─ verdict = 2 blockers, 0 nitpicks
   │  ├─ absorb from
   │  │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r002._.given.by_peer.mechanic.md
   │  └─ articulate into
   │     └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r002._.taken.by_self.mechanic.md
   │
   ├─ why a retired reviewer still awaits
   │  └─ it spoke, and was then removed from the guard config. what it said
   │     was never answered, and a debt is keyed to the reviewer rather than
   │     to the artifact, so no edit to the artifact can clear it.
   │
   ├─ what to do — answer the retired reviewer
   │  └─ answer it as you would any other — write the .taken above. it will
   │     not speak again, so your answer is what discharges it.
   │
   └─ absorb each reviewer, then run all 2 — one per reviewer
      ├─ rhx route.stone.set --stone 1.execute --as absorbed --that architect
      └─ rhx route.stone.set --stone 1.execute --as absorbed --that mechanic"
`;

exports[`formatRouteGuardReviewPeerFeedbackAbsorbPrompt given: [case4] a RETIRED reviewer still owes a reply when: [t1] no reviewer is retired then: matches snapshot — the SINGLE-reviewer close is its own variant 1`] = `
"🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = architect
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ absorb from
   │  │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.given.by_peer.architect.md
   │  └─ articulate into
   │     └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.taken.by_self.architect.md
   │
   └─ when you've absorbed this reviewer, run
      └─ rhx route.stone.set --stone 1.execute --as absorbed --that architect"
`;

exports[`formatRouteGuardReviewPeerFeedbackAbsorbPrompt given: [case5] an UNREADABLE reviewer — the counts are fabricated when: [t0] rendered beside a readable reviewer then: matches snapshot 1`] = `
"🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/2
   │  ├─ slug = architect
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ absorb from
   │  │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.given.by_peer.architect.md
   │  └─ articulate into
   │     └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.taken.by_self.architect.md
   │
   ├─ review.peer 2/2
   │  ├─ slug = mechanic
   │  ├─ verdict = unreadable — no numeric count found
   │  ├─ absorb from
   │  │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r002._.given.by_peer.mechanic.md
   │  └─ articulate into
   │     └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r002._.taken.by_self.mechanic.md
   │
   ├─ why an unreadable reviewer gates
   │  └─ its output carried no numeric blocker or nitpick count, so no
   │     verdict was ever seen. an absent verdict is not a clean one — to
   │     score it 0/0 would read as an approval nobody granted, so it gates
   │     instead.
   │
   ├─ what to do — name the malfunction
   │  └─ read its .given above — the reviewer malfunctioned, and the .taken
   │     is where you say so. do not hunt for a blocker in it; there is none
   │     to find.
   │
   └─ absorb each reviewer, then run all 2 — one per reviewer
      ├─ rhx route.stone.set --stone 1.execute --as absorbed --that architect
      └─ rhx route.stone.set --stone 1.execute --as absorbed --that mechanic"
`;

exports[`formatRouteGuardReviewPeerFeedbackAbsorbPrompt given: [case5] an UNREADABLE reviewer — the counts are fabricated when: [t1] no reviewer is unreadable then: matches snapshot — the clean single-reviewer render 1`] = `
"🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = architect
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ absorb from
   │  │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.given.by_peer.architect.md
   │  └─ articulate into
   │     └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r001._.taken.by_self.architect.md
   │
   └─ when you've absorbed this reviewer, run
      └─ rhx route.stone.set --stone 1.execute --as absorbed --that architect"
`;

exports[`formatRouteGuardReviewPeerFeedbackAbsorbPrompt given: [case6] ONE reviewer that is BOTH retired AND unreadable when: [t0] rendered as the only reviewer then: matches snapshot — the STACKED render, the variant that had none 1`] = `
"🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = mechanic
   │  ├─ status = retired from the guard config
   │  ├─ verdict = unreadable — no numeric count found
   │  ├─ absorb from
   │  │  └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r002._.given.by_peer.mechanic.md
   │  └─ articulate into
   │     └─ .behavior/v2026_01_01.demo/.reviews/peer/1.execute._.review.i001.a1b2c3.r002._.taken.by_self.mechanic.md
   │
   ├─ why a retired reviewer still awaits
   │  └─ it spoke, and was then removed from the guard config. what it said
   │     was never answered, and a debt is keyed to the reviewer rather than
   │     to the artifact, so no edit to the artifact can clear it.
   │
   ├─ what to do — answer the retired reviewer
   │  └─ answer it as you would any other — write the .taken above. it will
   │     not speak again, so your answer is what discharges it.
   │
   ├─ why an unreadable reviewer gates
   │  └─ its output carried no numeric blocker or nitpick count, so no
   │     verdict was ever seen. an absent verdict is not a clean one — to
   │     score it 0/0 would read as an approval nobody granted, so it gates
   │     instead.
   │
   ├─ what to do — name the malfunction
   │  └─ read its .given above — the reviewer malfunctioned, and the .taken
   │     is where you say so. do not hunt for a blocker in it; there is none
   │     to find.
   │
   └─ when you've absorbed this reviewer, run
      └─ rhx route.stone.set --stone 1.execute --as absorbed --that mechanic"
`;
